bug no dialog medidas

--- a/src/app/services/dialogs/dialog-cardio/dialog-cardio.component.html
+++ b/src/app/services/dialogs/dialog-cardio/dialog-cardio.component.html
@@ -1,22 +1,22 @@
 <h1 mat-dialog-title>Atenção</h1>
 <div mat-dialog-content>
-  <p>{{msg}}</p>
+  <p style="color: black">{{msg}}</p>
 
   <div>
-    <mat-form-field>
+    <mat-form-field style="color: black">
         <mat-label *ngIf="erroAltura" style="color: red;">Altura</mat-label>
-        <mat-label *ngIf="!erroAltura">Altura</mat-label>
+        <mat-label *ngIf="!erroAltura" style="color: black">Altura</mat-label>
         <input matInput type="number" [(ngModel)]="ev.altura" placeholder="metros">
     </mat-form-field>
-  <mat-form-field>
+  <mat-form-field style="color: black">
     <mat-label *ngIf="erroPeso" style="color: red;">Peso Corporal</mat-label>
-    <mat-label *ngIf="!erroPeso">Peso Corporal</mat-label>
+    <mat-label *ngIf="!erroPeso" style="color: black">Peso Corporal</mat-label>
     <input matInput type="number" [(ngModel)]="ev.peso" placeholder="Kg">
   </mat-form-field>
   <!-- FC Repouso  -->
-  <mat-form-field>
+  <mat-form-field style="color: black">
     <mat-label *ngIf="erroFC2" style="color: red;">FC Repouso</mat-label>
-    <mat-label *ngIf="!erroFC2">FC Repouso</mat-label>
+    <mat-label *ngIf="!erroFC2" style="color: black">FC Repouso</mat-label>
     <input matInput type="number" [(ngModel)]="ev.fc" placeholder="bpm">
   </mat-form-field>
 
