--- a/src/app/services/dialogs/dialog-medidas.component.html
+++ b/src/app/services/dialogs/dialog-medidas.component.html
@@ -6,22 +6,22 @@
   <mat-form-field class="input-sm"  style="color: black">
     <mat-label *ngIf="erroAltura" style="color: red;">Altura</mat-label>
     <mat-label *ngIf="!erroAltura" style="color: black">Altura</mat-label>
-    <input matInput type="number" [(ngModel)]="ev.altura" placeholder="m">
+    <input matInput type="number" style="color: black" [(ngModel)]="ev.altura" placeholder="m">
   </mat-form-field>
   <mat-form-field style="color: black">
     <mat-label *ngIf="erroPeso" style="color: red;">Peso Corporal</mat-label>
     <mat-label *ngIf="!erroPeso" style="color: black">Peso Corporal</mat-label>
-    <input matInput type="number" [(ngModel)]="ev.peso" placeholder="Kg">
+    <input matInput type="number" style="color: black" [(ngModel)]="ev.peso" placeholder="Kg">
   </mat-form-field>
   <mat-form-field class="input-sm" style="color: black">
     <mat-label *ngIf="erroPunho" style="color: red;">Diâmetro do Punho</mat-label>
     <mat-label *ngIf="!erroPunho" style="color: black">Diâmetro do Punho</mat-label>
-    <input matInput type="number" [(ngModel)]="ev.punho" placeholder="cm">
+    <input matInput type="number" style="color: black" [(ngModel)]="ev.punho" placeholder="cm">
   </mat-form-field>
   <mat-form-field style="color: black">
     <mat-label *ngIf="erroJoelho" style="color: red;">Diâmetro do Joelho</mat-label>
     <mat-label *ngIf="!erroJoelho" style="color: black">Diâmetro do Joelho</mat-label>
-    <input matInput type="number" [(ngModel)]="ev.joelho" placeholder="cm">
+    <input matInput type="number" style="color: black" [(ngModel)]="ev.joelho" placeholder="cm">
   </mat-form-field>
 
   </div>
