testes ortopedicos e revisão

--- a/src/app/avaliation/composicao-corporal/cc.component.html
+++ b/src/app/avaliation/composicao-corporal/cc.component.html
@@ -2,6 +2,7 @@
     <app-header-name></app-header-name>
 
     <div class="section">
+        <div class="section-content">
         <h1 class="h1-title">Composição Corporal</h1>
         <mat-accordion>
             <mat-expansion-panel class="accordion" (opened)="panelOpenState = true" (closed)="panelOpenState = false">
@@ -208,7 +209,7 @@
                 </mat-card> -->
             </mat-expansion-panel>
         </mat-accordion>
-
+        </div>
     </div>
 
 </div>
