--- a/src/app/avaliation/av-dash/av-dash.component.scss
+++ b/src/app/avaliation/av-dash/av-dash.component.scss
@@ -15,6 +15,9 @@
     flex-direction: column !important;
     justify-content: flex-start !important;
     align-items: center !important;
+    &-content{
+      width: 100%;
+    }
 
     h1 {
       margin-top: 40px;
@@ -63,7 +66,7 @@
   }
 }
 @media only screen and (min-width: 768px) {
-  .section {
+  .section-content {
     width: 425px !important;
   }
   ::-webkit-scrollbar {
