--- a/src/app/avaliation/composicao-corporal/cc.component.scss
+++ b/src/app/avaliation/composicao-corporal/cc.component.scss
@@ -16,6 +16,9 @@
     flex-direction: column !important;
     justify-content: flex-start !important;
     align-items: center !important;
+    &-content{
+      width: 100%;
+    }
 
     h1 {
       margin-top: 80px;
@@ -170,12 +173,14 @@
 }
 
 @media only screen and (min-width: 768px) {
-  .section {
-    width: 520px !important;
+  .section{
     h1 {
       width: 100%;
       height: 60px;
     }
+  }
+  .section-content {
+    width: 520px !important;
   }
 
   .mat-accordion {
