--- a/src/app/avaliation/CardioPulmunar/teste-bicicleta/teste-bicicleta.component.html
+++ b/src/app/avaliation/CardioPulmunar/teste-bicicleta/teste-bicicleta.component.html
@@ -3,25 +3,26 @@
 
 
     <div class="section">
+        <div class="section-content">
         <h1 class="h1-title" i18n>Testes de Bicicleta</h1>
         <div class="section-cards">
-            <mat-card>
-                <mat-card-header [routerLink]="['/astryh']">
+            <mat-card [routerLink]="['/astryh']">
+                <mat-card-header>
                     <mat-card-subtitle i18n="Subtitle">Astrand-Ryhming</mat-card-subtitle>
                 </mat-card-header>
             </mat-card>
-            <mat-card>
-                <mat-card-header [routerLink]="['/balke']">
+            <mat-card [routerLink]="['/balke']">
+                <mat-card-header>
                     <mat-card-subtitle i18n="Subtitle">Balke e Ware</mat-card-subtitle>
                 </mat-card-header>
             </mat-card>
-            <mat-card>
-                <mat-card-header [routerLink]="['/ymca']">
+            <mat-card [routerLink]="['/ymca']">
+                <mat-card-header>
                     <mat-card-subtitle i18n="Subtitle">YMCA - Golding, Myers & Sinning</mat-card-subtitle>
                 </mat-card-header>
             </mat-card>
         </div>
-
+        </div>
     </div>
 
 </div>
