--- a/src/app/avaliation/CardioPulmunar/teste-corrida/teste-corrida.component.html
+++ b/src/app/avaliation/CardioPulmunar/teste-corrida/teste-corrida.component.html
@@ -1,6 +1,7 @@
 <div class="container">
     <app-header-name></app-header-name>
     <div class="section">
+        <div class="section-content">
         <h1 class="h1-title" i18n>Testes de Corrida</h1>
         <div class="section-cards">
             <mat-card [routerLink]="['/cooper']">
@@ -37,6 +38,6 @@
                 </mat-card-content>
             </mat-card>
         </div>
-
+        </div>
     </div>
 </div>
