--- a/src/app/avaliation/CardioPulmunar/teste-piscina/teste-piscina.component.scss
+++ b/src/app/avaliation/CardioPulmunar/teste-piscina/teste-piscina.component.scss
@@ -22,7 +22,7 @@
   }
   
   .mat-card{
-    height: 30px;
+    min-height: 30px;
     background-color:  rgba(119, 107, 107, 0.788);
     margin-bottom: 3px;
   
@@ -31,8 +31,18 @@
       font-weight: unset;
       color: white;
     }
+    .mat-card-content{
+      margin-left: 16px;
+      font-size: small;
+      line-height: 0.8;
+      color: white;
+    }
   }
-  
+  ::ng-deep{
+      .mat-card-header-text{
+      width: 100% !important;
+    }
+  }
   @media only screen and (min-width: 768px){
     .section{
       width: 425px !important;
