--- a/src/app/avaliation/CardioPulmunar/ymca-banco/ymca-banco.component.html
+++ b/src/app/avaliation/CardioPulmunar/ymca-banco/ymca-banco.component.html
@@ -1,6 +1,7 @@
 <div class="container">
     <app-header-name></app-header-name>
     <div class="section">
+        <div class="section-content">
         <h1 class="h1-title" i18n>YMCA - 3 minutos</h1>
         <form #f="ngForm" (submit)="save(f.value)" autocomplete="off">
             <table class="section-table">
@@ -131,7 +132,7 @@
             </div>
         </form>
         <div class="section-info">
-            <mat-card>
+<!--             <mat-card>
                 <mat-card-header>
                     <mat-card-title>Especificações</mat-card-title>
                 </mat-card-header>
@@ -140,7 +141,7 @@
                     <p><strong>Faixa etária:</strong> Adultos maiores de 18 anos, homens e mulheres.</p>
                     <p><strong>Objetivo:</strong> Subir e descer um banco num .... durante 3 minutos.</p>
                 </mat-card-content>
-            </mat-card>
+            </mat-card> -->
         </div>
 
         <table class="table">
@@ -288,6 +289,6 @@
         </table>
         <em>Morrow, JR; Jackson, A.; Disch, J. e Mood, D. (2003). Medida e Avaliação do Desempenho Humano. 2ªed. Porto Alegre. ArtMed.</em>
 
-
+        </div>
     </div>
 </div>
