--- a/src/app/avaliation/teste-ortopedicos-dash/teste-ortopedicos-dash.component.html
+++ b/src/app/avaliation/teste-ortopedicos-dash/teste-ortopedicos-dash.component.html
@@ -11,8 +11,8 @@
                             CERVICAL
                         </mat-panel-title>
                     </mat-expansion-panel-header>
-                    <mat-card>
-                        <mat-card-header routerLink="/video/Teste de Compressao Cervical e de Spurling.mp4">
+                    <mat-card routerLink="/video/Teste de Compressao Cervical e de Spurling.mp4">
+                        <mat-card-header>
                             <mat-card-subtitle i18n="Subtitle">Teste de Compressão Cervical e de Spurling
                             </mat-card-subtitle>
                         </mat-card-header>
@@ -28,8 +28,8 @@
                             LOMBAR
                         </mat-panel-title>
                     </mat-expansion-panel-header>
-                    <mat-card>
-                        <mat-card-header routerLink="/video/Teste de Lasegue.mp4">
+                    <mat-card routerLink="/video/Teste de Lasegue.mp4">
+                        <mat-card-header>
                             <mat-card-subtitle i18n="Subtitle">Teste de Lasègue e Bragard
                             </mat-card-subtitle>
                         </mat-card-header>
@@ -37,8 +37,8 @@
                             Teste provocativo para dor lombar associada a compressão radicular e/ou ciatalgia.
                         </mat-card-content>
                     </mat-card>
-                    <mat-card>
-                        <mat-card-header routerLink="/video/Teste de Slump.mp4">
+                    <mat-card routerLink="/video/Teste de Slump.mp4">
+                        <mat-card-header>
                             <mat-card-subtitle i18n="Subtitle">Teste de Slump
                             </mat-card-subtitle>
                         </mat-card-header>
@@ -46,8 +46,8 @@
                             Teste provocativo para hérnia, meningite, radiculopatia.
                         </mat-card-content>
                     </mat-card>
-                    <mat-card>
-                        <mat-card-header routerLink="/video/Teste Neurodinaico do Nervo Femural.mp4">
+                    <mat-card routerLink="/video/Teste Neurodinaico do Nervo Femural.mp4">
+                        <mat-card-header>
                             <mat-card-subtitle i18n="Subtitle">Teste Neurodinâmico do Nervo Femoral
                             </mat-card-subtitle>
                         </mat-card-header>
@@ -55,8 +55,8 @@
                             Teste provocativo para a irritação do nervo femoral.
                         </mat-card-content>
                     </mat-card>
-                    <mat-card>
-                        <mat-card-header routerLink="/video/Teste de Kemp.mp4">
+                    <mat-card routerLink="/video/Teste de Kemp.mp4">
+                        <mat-card-header>
                             <mat-card-subtitle i18n="Subtitle">Teste de Kemp
                             </mat-card-subtitle>
                         </mat-card-header>
@@ -72,8 +72,8 @@
                             SACROILÍACA E QUADRIL
                         </mat-panel-title>
                     </mat-expansion-panel-header>
-                    <mat-card>
-                        <mat-card-header routerLink="/video/testedecompressaodasacroiliaca.mp4">
+                    <mat-card routerLink="/video/testedecompressaodasacroiliaca.mp4">
+                        <mat-card-header>
                             <mat-card-subtitle i18n="Subtitle">Teste de Compressão da Sacroilíaca
                             </mat-card-subtitle>
                         </mat-card-header>
@@ -81,8 +81,8 @@
                             Teste provocativo para inflamação da sacroilíaca.
                         </mat-card-content>
                     </mat-card>
-                    <mat-card>
-                        <mat-card-header routerLink="/video/Teste de Faber.mp4">
+                    <mat-card routerLink="/video/Teste de Faber.mp4">
+                        <mat-card-header>
                             <mat-card-subtitle i18n="Subtitle">Teste de Faber
                             </mat-card-subtitle>
                         </mat-card-header>
@@ -90,8 +90,8 @@
                             Teste provocativo para inflamação da sacroilíaca.
                         </mat-card-content>
                     </mat-card>
-                    <mat-card>
-                        <mat-card-header routerLink="/video/Teste de Faber Plano2.mp4">
+                    <mat-card routerLink="/video/Teste de Faber Plano2.mp4">
+                        <mat-card-header>
                             <mat-card-subtitle i18n="Subtitle">Teste de Faber - Plano 2
                             </mat-card-subtitle>
                         </mat-card-header>
@@ -99,8 +99,8 @@
                             Teste provocativo para inflamação da sacroilíaca.
                         </mat-card-content>
                     </mat-card>
-                    <mat-card>
-                        <mat-card-header routerLink="/video/Teste de Ober.mp4">
+                    <mat-card routerLink="/video/Teste de Ober.mp4">
+                        <mat-card-header>
                             <mat-card-subtitle i18n="Subtitle">Teste de Ober
                             </mat-card-subtitle>
                         </mat-card-header>
@@ -108,8 +108,8 @@
                             Testar o encurtamento da fáscia (banda) ílio tibial.
                         </mat-card-content>
                     </mat-card>
-                    <mat-card>
-                        <mat-card-header routerLink="/video/Teste de Thomas.mp4">
+                    <mat-card routerLink="/video/Teste de Thomas.mp4">
+                        <mat-card-header>
                             <mat-card-subtitle i18n="Subtitle">Teste de Thomas
                             </mat-card-subtitle>
                         </mat-card-header>
@@ -117,8 +117,8 @@
                             Testar encurtamento dos músculos Psoas e Reto femoral.
                         </mat-card-content>
                     </mat-card>
-                    <mat-card>
-                        <mat-card-header routerLink="/video/Teste de Trendelenburg.mp4">
+                    <mat-card routerLink="/video/Teste de Trendelenburg.mp4">
+                        <mat-card-header>
                             <mat-card-subtitle i18n="Subtitle">Teste de Trendelenburg
                             </mat-card-subtitle>
                         </mat-card-header>
@@ -126,8 +126,8 @@
                             Testa a correta ativação do glúteo médio e mínimo.
                         </mat-card-content>
                     </mat-card>
-                    <mat-card>
-                        <mat-card-header routerLink="/video/Teste de Trust Sacral.mp4">
+                    <mat-card routerLink="/video/Teste de Trust Sacral.mp4">
+                        <mat-card-header>
                             <mat-card-subtitle i18n="Subtitle">Teste de Thrust Sacral
                             </mat-card-subtitle>
                         </mat-card-header>
@@ -135,8 +135,8 @@
                             Teste provocativo para inflamação da sacroilíaca.
                         </mat-card-content>
                     </mat-card>
-                    <mat-card>
-                        <mat-card-header routerLink="/video/Teste Provocativo de Distracao.mp4">
+                    <mat-card routerLink="/video/Teste Provocativo de Distracao.mp4">
+                        <mat-card-header>
                             <mat-card-subtitle i18n="Subtitle">Teste Provocativo de Distração
                             </mat-card-subtitle>
                         </mat-card-header>
@@ -144,8 +144,8 @@
                             Teste provocativo para a parte anterior da sacroilíaca.
                         </mat-card-content>
                     </mat-card>
-                    <mat-card>
-                        <mat-card-header routerLink="/video/Teste Provocativo de Lesao do Labrum.mp4">
+                    <mat-card routerLink="/video/Teste Provocativo de Lesao do Labrum.mp4">
+                        <mat-card-header>
                             <mat-card-subtitle i18n="Subtitle">Teste Provocativo de Lesão do Labrum
                             </mat-card-subtitle>
                         </mat-card-header>
@@ -161,8 +161,8 @@
                             COMPLEXO DO OMBRO E CINTURA ESCAPULAR
                         </mat-panel-title>
                     </mat-expansion-panel-header>
-                    <mat-card>
-                        <mat-card-header routerLink="/video/Teste de Gerber.mp4">
+                    <mat-card routerLink="/video/Teste de Gerber.mp4">
+                        <mat-card-header>
                             <mat-card-subtitle i18n="Subtitle">Teste de Gerber
                             </mat-card-subtitle>
                         </mat-card-header>
@@ -170,8 +170,8 @@
                             Testa lesões do tendão ou músculo subescapular.
                         </mat-card-content>
                     </mat-card>
-                    <mat-card>
-                        <mat-card-header routerLink="/video/Teste de Impingement.mp4">
+                    <mat-card routerLink="/video/Teste de Impingement.mp4">
+                        <mat-card-header>
                             <mat-card-subtitle i18n="Subtitle">Teste do Arco do Movimento
                             </mat-card-subtitle>
                         </mat-card-header>
@@ -179,8 +179,8 @@
                             Testa o conflito subacromial.
                         </mat-card-content>
                     </mat-card>
-                    <mat-card>
-                        <mat-card-header routerLink="/video/Teste de Job.mp4">
+                    <mat-card routerLink="/video/Teste de Job.mp4">
+                        <mat-card-header>
                             <mat-card-subtitle i18n="Subtitle">Teste de Jobe
                             </mat-card-subtitle>
                         </mat-card-header>
@@ -188,8 +188,8 @@
                             Testa lesões do tendão ou músculo supraespinhoso.
                         </mat-card-content>
                     </mat-card>
-                    <mat-card>
-                        <mat-card-header routerLink="/video/Teste de Cancela.mp4">
+                    <mat-card routerLink="/video/Teste de Cancela.mp4">
+                        <mat-card-header>
                             <mat-card-subtitle i18n="Subtitle">Teste de Cancela
                             </mat-card-subtitle>
                         </mat-card-header>
@@ -197,8 +197,8 @@
                             Testa lesão no tendão ou músculo infraespinhoso.
                         </mat-card-content>
                     </mat-card>
-                    <mat-card>
-                        <mat-card-header routerLink="/video/Teste de Peits.mp4">
+                    <mat-card routerLink="/video/Teste de Peits.mp4">
+                        <mat-card-header>
                             <mat-card-subtitle i18n="Subtitle">Teste de Patte
                             </mat-card-subtitle>
                         </mat-card-header>
@@ -206,8 +206,8 @@
                             Testa lesão no tendão ou músculo do supraespinhoso e redondo menor.
                         </mat-card-content>
                     </mat-card>
-                    <mat-card>
-                        <mat-card-header routerLink="/video/Teste de Yergason.mp4">
+                    <mat-card routerLink="/video/Teste de Yergason.mp4">
+                        <mat-card-header>
                             <mat-card-subtitle i18n="Subtitle">Teste de Yergason
                             </mat-card-subtitle>
                         </mat-card-header>
@@ -215,8 +215,8 @@
                             Testa lesões do tendão da cabeça longa do bíceps e/ou lesão no labrum superior da glenóide.
                         </mat-card-content>
                     </mat-card>
-                    <mat-card>
-                        <mat-card-header routerLink="/video/Teste Napoleao.mp4">
+                    <mat-card routerLink="/video/Teste Napoleao.mp4">
+                        <mat-card-header>
                             <mat-card-subtitle i18n="Subtitle">Teste de Napoleão
                             </mat-card-subtitle>
                         </mat-card-header>
@@ -232,8 +232,8 @@
                             JOELHO
                         </mat-panel-title>
                     </mat-expansion-panel-header>
-                    <mat-card>
-                        <mat-card-header routerLink="/video/Teste de Gaveta Posterior.mp4">
+                    <mat-card routerLink="/video/Teste de Gaveta Posterior.mp4">
+                        <mat-card-header>
                             <mat-card-subtitle i18n="Subtitle">Teste de Gaveta Posterior
                             </mat-card-subtitle>
                         </mat-card-header>
@@ -241,8 +241,8 @@
                             Testa a integridade do ligamento cruzado posterior.
                         </mat-card-content>
                     </mat-card>
-                    <mat-card>
-                        <mat-card-header routerLink="/video/Teste de Gaveta Anterior.mp4">
+                    <mat-card routerLink="/video/Teste de Gaveta Anterior.mp4">
+                        <mat-card-header>
                             <mat-card-subtitle i18n="Subtitle">Teste de Gaveta Anterior
                             </mat-card-subtitle>
                         </mat-card-header>
@@ -250,8 +250,8 @@
                             Testa a integridade do ligamento cruzado anterior.
                         </mat-card-content>
                     </mat-card>
-                    <mat-card>
-                        <mat-card-header routerLink="/video/Teste de Lelli.mp4">
+                    <mat-card routerLink="/video/Teste de Lelli.mp4">
+                        <mat-card-header>
                             <mat-card-subtitle i18n="Subtitle">Teste de Lelli
                             </mat-card-subtitle>
                         </mat-card-header>
@@ -259,8 +259,8 @@
                             Testa a integridade do ligamento cruzado anterior.
                         </mat-card-content>
                     </mat-card>
-                    <mat-card>
-                        <mat-card-header routerLink="/video/testedeapley.mp4">
+                    <mat-card routerLink="/video/testedeapley.mp4">
+                        <mat-card-header>
                             <mat-card-subtitle i18n="Subtitle">Teste de Apley
                             </mat-card-subtitle>
                         </mat-card-header>
@@ -268,8 +268,8 @@
                             Testa a integridade dos meniscos.
                         </mat-card-content>
                     </mat-card>
-                    <mat-card>
-                        <mat-card-header routerLink="/video/Teste de Grinding.mp4">
+                    <mat-card routerLink="/video/Teste de Grinding.mp4">
+                        <mat-card-header>
                             <mat-card-subtitle i18n="Subtitle">Teste Grinding
                             </mat-card-subtitle>
                         </mat-card-header>
