--- a/src/app/avaliation/CardioPulmunar/natacao/natacao.component.scss
+++ b/src/app/avaliation/CardioPulmunar/natacao/natacao.component.scss
@@ -12,6 +12,9 @@
   justify-content: flex-start;
   align-items: center;
   color: white;
+  &-content{
+    width: 100%;
+  }
 
   .h1-title {
     width: 100%;
@@ -52,7 +55,7 @@ em {
   font-size: x-small;
 }
 @media only screen and (min-width: 768px) {
-  .section{
+  .section-content{
     width: 520px !important;
   }
 }
