--- a/src/app/avaliation/CardioPulmunar/teste-caminhada/teste-caminhada.component.scss
+++ b/src/app/avaliation/CardioPulmunar/teste-caminhada/teste-caminhada.component.scss
@@ -12,6 +12,9 @@
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
+  &-content{
+    width: 100%;
+  }
 
 
 }
@@ -48,7 +51,7 @@
 }
 
 @media only screen and (min-width: 768px){
-  .section{
+  .section-content{
     width: 425px !important;
     margin: auto;
   }
