--- a/src/app/avaliation/CardioPulmunar/teste-corrida/teste-corrida.component.scss
+++ b/src/app/avaliation/CardioPulmunar/teste-corrida/teste-corrida.component.scss
@@ -12,7 +12,9 @@
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-
+  &-content{
+    width: 100%;
+  }
 
 }
 
@@ -60,7 +62,7 @@
 }
 
 @media only screen and (min-width: 768px){
-  .section{
+  .section-content{
     width: 425px !important;
     margin: auto;
   }
