--- a/src/app/avaliation/CardioPulmunar/teste-piscina/teste-piscina.component.html
+++ b/src/app/avaliation/CardioPulmunar/teste-piscina/teste-piscina.component.html
@@ -3,10 +3,15 @@
     <div class="section">
         <h1 class="h1-title" i18n>Testes em Piscina</h1>
         <div class="section-cards">
-            <mat-card>
-                <mat-card-header [routerLink]="['/natacao']">
+            <mat-card [routerLink]="['/natacao']">
+                <mat-card-header>
                     <mat-card-subtitle i18n="Subtitle">Natação - Nado Crawl na piscina - 12min</mat-card-subtitle>
                 </mat-card-header>
+                <mat-card-content>
+                    <p><strong>Destinado a: </strong> Não definido.</p>
+                    <p><strong>Faixa etária:</strong> Não definida</p>
+                    <p><strong>Objetivo:</strong> Nadar a maior distância possivél 12 minutos, nadando crawl na piscina.</p>
+                </mat-card-content>
             </mat-card>
         </div>
 
