--- a/src/app/avaliation/CardioPulmunar/ymca-banco/ymca-banco.component.scss
+++ b/src/app/avaliation/CardioPulmunar/ymca-banco/ymca-banco.component.scss
@@ -12,6 +12,9 @@
   justify-content: flex-start;
   align-items: center;
   color: white;
+  &-content{
+    width: 100%;
+  }
 
   .h1-title {
     width: 100%;
@@ -52,11 +55,8 @@
 }
 
 @media only screen and (min-width: 768px) {
-  form {
-    width: 90% !important;
-    margin: auto;
+  .section-content{
+    width: 520px;
   }
-  .section-info {
-    width: 60%;
-  }
+
 }
