--- a/src/app/commun/metronome/metronome.component.scss
+++ b/src/app/commun/metronome/metronome.component.scss
@@ -1,6 +1,8 @@
 .container {
-    background-color: white;
-    background-image: unset;
+  background-image: url("./../../../assets/img/postural_fundo.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
   }
   .section {
     width: 100%;
